--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Bootstrap Project</title>
     <!-- Add Vercel configuration -->
-    <script type="application/json" src="/vercel.json"></script>
+    <script type="application/json" src="vercel.json"></script>
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/Style.css" />
     <style>
